--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,6 +8,11 @@
     ]
   },
   "description": "URL生成二维码",
+  "icons": {
+      "128":"icon-128.png",
+      "16": "icon-16.png",
+      "48": "icon-48.png"
+   },
   "page_action": {
     "default_icon": "icon.png",
     "default_title": "URL二维码",
